# drf-course

./: LICENSE  pyproject.toml
api/: admin.py  mixins.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
api/management/commands/: csu.py
api/migrations/: 0001_initial.py
auth_api/: admin.py  models.py  urls.py
config/: settings.py  urls.py
